[tool.poetry]
name = "amqp-workers"
version = "0.1.1"
description = ""
authors = ["JimZhang <zzl22100048@gmail.com>"]
readme = "README.md"
packages = [{include = "amqpworker"}]
repository = "https://git.loom.run/Coder/amqp-worker"
keywords = ["amqp", "rabbitmq"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
amqpstorm = {version = "^2.10.6", source = "douban"}
pydantic = {version = "1.10.7", source = "douban"}
loguru = {version = "^0.7.0", source = "douban"}
cached-property = {version = "^1.5.2", source = "douban"}
delayedqueue = {version = "^1.0.0", source = "douban"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[[tool.poetry.source]]
name = "douban"
url = "https://mirror.baidu.com/pypi/simple"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]